--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,3 +13,16 @@ jobs:
           distribution: 'adopt'
       - name: Test
         run: mvn test
+
+  lind:
+    name: Lind with Checkstyle
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: List
+        run: mvn checkout-check
