--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -15,7 +15,7 @@ jobs:
         run: mvn test
 
   lind:
-    name: Lind with Checkstyle
+    name: Lind with checkstyle
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -24,5 +24,5 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
-      - name: List
-        run: mvn checkout-check
+      - name: Checkstyle
+        run: mvn checkstyle:check
