--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -24,4 +24,4 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
       - name: Check code style
-        run: mvn checkstyle::check
+        run: mvn checkstyle:check
