--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,3 +13,15 @@ jobs:
           distribution: 'adopt'
       - name: Test
         run: mvn test
+  checkstyle:
+    name: Check code style
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Check code style
+        run: mvn checkstyle:check   
