--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,5 +1,5 @@
 name: CI for Java Invoice
-on: [push]
+on: [ push ]
 jobs:
   test:
     name: Unit tests
@@ -14,5 +14,15 @@ jobs:
       - name: Test
         run: mvn test
 
+  checkstyle:
+    name: Check code style
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
       - name: Check code style
         run: mvn checkstyle:check
